# connectagram

./: .gitignore  CMakeLists.txt  CREDITS  ChangeLog  NEWS  README  connectagram.pro  mac_deploy.sh  windows_deploy.bat
data/en/: words
doc/: connectagram.6
gamedata/id/: language.ini
icons/: connectagram.appdata.xml  connectagram.appdata.xml.in  connectagram.desktop  connectagram.desktop.in  connectagram.icns  connectagram.xpm  icon.qrc  icon.rc  icons.qrc
icons/po/: LINGUAS  cs.po  de.po  description.pot  el.po  es_PE.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  lt.po  nl.po  pl.po  pt.po  ro.po  ru.po  tr.po  uk.po  update-po.sh  update-pot.sh  zh.po
mac/: Info.plist.in
src/: board.cpp  board.h  cell.cpp  cell.h  clock.cpp  clock.h  definitions.cpp  definitions.h  dictionary.cpp  dictionary.h  letter.cpp  letter.h  locale_dialog.cpp  locale_dialog.h  main.cpp  new_game_dialog.cpp  new_game_dialog.h  pattern.cpp  pattern.h  random.h  score_board.cpp  score_board.h  scores_dialog.cpp  scores_dialog.h  src.pro  view.cpp  view.h  window.cpp  window.h  word.cpp  word.h  wordlist.cpp  wordlist.h
tools/: CMakeLists.txt  tools.pro  wordlist.cpp  words.py
tools/wordlist/: main.cpp  wordlist.pro
translations/: connectagram_cs.qm  connectagram_cs.ts  connectagram_de.qm  connectagram_de.ts  connectagram_el.qm  connectagram_el.ts  connectagram_en.qm  connectagram_en.ts  connectagram_es_PE.ts  connectagram_fr.qm  connectagram_fr.ts  connectagram_he.ts  connectagram_hr.qm  connectagram_hr.ts  connectagram_hu.qm  connectagram_hu.ts  connectagram_id.ts  connectagram_it.ts  connectagram_lt.qm  connectagram_lt.ts  connectagram_nl.qm  connectagram_nl.ts  connectagram_pl.qm  connectagram_pl.ts  connectagram_pt.ts  connectagram_ro.qm  connectagram_ro.ts  connectagram_ru.qm  connectagram_ru.ts  connectagram_tr.qm  connectagram_tr.ts  connectagram_uk.ts
windows/: installer.nsi  removeprevious.nsh
wordlists/: CMakeLists.txt  en  fr  hu  ru  wordlists.pro
